selfhost/test/typechecker/binary/coalesce_error.2.out
Error at %FILE_NAME%:3:6
Type mismatch
  |  a ?: b
          ^
Expected: Int
but instead found: Int?
