selfhost/test/typechecker/binary/coalesce_error.2.abra
val a: Int? = 123
val b: Int? = None
a ?: b